--- a/dev/conda-recipe/meta.yaml
+++ b/dev/conda-recipe/meta.yaml
@@ -11,7 +11,7 @@ requirements:
     - brian2 >=2.0
     - matplotlib >=1.3.1
     - pylems >=0.4.9
-    - libNeuroML>=0.2
+    - libNeuroML
 
 test:
   # Python imports
