--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,7 @@ script:
   else
     export SRCDIR=$(pwd);
     conda build --quiet -c brian-team dev/conda-recipe;
+    pip install -q libneuroml;
   fi
 
 after_success:
